kubescape/allow-monitoring.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-monitoring-scrape
  namespace: nexaretail-prod
  labels:
    app.kubernetes.io/part-of: nexaretail
    security.nexaretail.com/policy: allow-monitoring
spec:
  podSelector:
    matchLabels:
      app: nexaretail-api
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: monitoring
      ports:
        - protocol: TCP
          port: 3000
