kubescape/allow-nexaretail-api.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-nexaretail-api
  namespace: nexaretail-prod
  labels:
    app.kubernetes.io/part-of: nexaretail
    security.nexaretail.com/policy: allow-api
spec:
  podSelector:
    matchLabels:
      app: nexaretail-api
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - ports:
        - protocol: TCP
          port: 3000
  egress:
    - ports:
        - protocol: TCP
          port: 5432
    - ports:
        - protocol: TCP
          port: 443
    - ports:
        - protocol: TCP
          port: 53
      to: []
    - ports:
        - protocol: UDP
          port: 53
      to: []
