kubescape/default-deny-all.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-all
  namespace: nexaretail-prod
  labels:
    app.kubernetes.io/part-of: nexaretail
    security.nexaretail.com/policy: zero-trust
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
